# cmd/account/docs/swagger.yaml
@@ -16,22 +16,6 @@ definitions:
       phone:
         type: string
     type: object
-  dto.CreateAccountResponseDto:
-    properties:
-      active:
-        type: boolean
-      email:
-        type: string
-      id:
-        type: string
-      person:
-        $ref: '#/definitions/dto.PersonResponseDto'
-    type: object
-  dto.GetAccountRequestDto:
-    properties:
-      id:
-        type: string
-    type: object
   dto.GetAccountResponseDto:
     properties:
       active:
@@ -91,7 +75,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/dto.CreateAccountResponseDto'
+            $ref: '#/definitions/dto.GetAccountResponseDto'
         "400":
           description: Bad Request
           schema:
@@ -104,22 +88,49 @@ paths:
       tags:
       - account
   /api/v1/account/:id:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an existing account record
+      parameters:
+      - description: Account ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.GetAccountResponseDto'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.HTTPError'
+      summary: Delete an account
+      tags:
+      - account
     get:
       consumes:
       - application/json
       description: Get account record by account ID.
       parameters:
-      - description: Account Id
-        in: body
-        name: GetAccountRequestDto
+      - description: Account ID
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/dto.GetAccountRequestDto'
+        type: string
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/dto.GetAccountResponseDto'
         "400":
